--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,26 @@
 name = "commitment-rs"
 version = "0.1.0"
 edition = "2024"
+authors = ["arittr"]
+description = "AI-powered commit message generator using local AI CLI tools"
+license = "MIT"
+repository = "https://github.com/arittr/commitment-rs"
 
 [dependencies]
+tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
+clap = { version = "4", features = ["derive"] }
+thiserror = "2"
+anyhow = "1"
+console = "0.15"
+indicatif = "0.17"
+regex = "1"
+once_cell = "1"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+serde_yaml = "0.9"
+
+[dev-dependencies]
+tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
+
+[profile.release]
+lto = true
